--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -3,7 +3,7 @@
     <md-card-subtitle>All your tasks in one place.</md-card-subtitle>
     <app-task-form (taskAdded)="taskAddedHandler($event)"></app-task-form>
     <md-list>
-        <div class="task-item" *ngFor="let task of tasks; trackBy: $index">
+        <div class="task-item" *ngFor="let task of tasks; ">
             <p><small><strong>{{ task.createdAt | date: 'short' }}</strong></small></p>
             <p>{{ task.description }}</p>
             <button class="delete" md-button md-raised-button color="accent" (click)="deleteTask(task)">Delete</button>
